<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/grid01"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:columnCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40"
        app:rowCount="3">


    </androidx.gridlayout.widget.GridLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txilRespuesta"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txetRespuesta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Palabra"
            android:textSize="28sp"
            android:fontFamily="@font/silkscreen"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="212dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btComprobar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_styles"
        android:fontFamily="@font/silkscreen"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/btComprobar"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toEndOf="@+id/txilRespuesta"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.276" />

    <TextView
        android:id="@+id/txCabecera"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/silkscreen"
        android:textColor="@color/black_app"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/lbDesordenadas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/silkscreen"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/azul_iconos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <TextView
        android:id="@+id/txTiempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/silkscreen"
        android:text="Tiempo"
        android:textColor="@color/black_app"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />

    <TextView
        android:id="@+id/txAvisos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/silkscreen"
        android:textAlignment="center"
        android:textColor="@color/avisos_app"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56" />

    <TextView
        android:id="@+id/txPalabra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/silkscreen"
        android:textAlignment="center"
        android:textColor="@color/black_app"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.615" />

    <TextView
        android:id="@+id/txDefinicion"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/silkscreen"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.755" />

    <ImageButton
        android:id="@+id/doublePoints"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:background="@android:color/transparent"
        android:padding="8dp"
        android:contentDescription="@string/double_points_description"
        android:tooltipText="Duplica tus puntos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/doublepoints" />

    <ImageButton
        android:id="@+id/moreTime"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/more_time_description"
        android:padding="8dp"
        android:tooltipText="Duplica tus puntos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/moretime" />

    <ImageButton
        android:id="@+id/unlockLetter"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/unlock_letter_description"
        android:padding="8dp"
        android:tooltipText="Duplica tus puntos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/unlockletter_v2" />

    <TextView
        android:id="@+id/txPuntos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/silkscreen"
        android:text="@string/puntos"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/black_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83" />

    <TextView
        android:id="@+id/txIntentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/silkscreen"
        android:text="@string/intentos"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/black_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83" />

    <TextView
        android:id="@+id/txNivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/silkscreen"
        android:text="@string/nivel"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/black_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83" />

</androidx.constraintlayout.widget.ConstraintLayout>